<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Finance</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="add_category">Add Category</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="dollar">$0.00</string>
    <string name="positive">+</string>
    <string name="negative">-</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Category</item>
        <item>Item</item>
        <item>Statistic</item>
        <item>Communities</item>
        <item>What\'s Hot</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_category</item>
        <item>@drawable/ic_item</item>
        <item>@drawable/ic_statistic</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_input">Input</string>

    <!-- Menus -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_category_filter_day">Filter by Day</string>
    <string name="action_category_filter_week">Filter by Week</string>
    <string name="action_category_filter_month">Filter by Month</string>
    <string name="title_activity_edit_category">EditCategory</string>

</resources>
